k8s/skovati.dev/skovati-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skovati-deploy
  labels:
    app: skovati
  namespace: skovati-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skovati-dev
  template:
    metadata:
      labels:
        app: skovati-dev
    spec:
      containers:
      - name: skovati-dev
        image: ghcr.io/skovati/website:a971e1-1669682246 # {"$imagepolicy": "flux-system:skovati-dev-image-policy"}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
