k8s/skovati.dev/skovati-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skovati-svc
  namespace: skovati-dev
spec:
  ports:
  - name: skovati-dev-port
    port: 8080
    targetPort: 80
  selector:
    app: skovati-dev
